--- a/app/views/tiles/_head.html.erb
+++ b/app/views/tiles/_head.html.erb
@@ -1,9 +1,9 @@
 <div class="head">
-  <a id="logo" href="http://twpaste.com/" accesskey="1" title="Twitter Paste Home">Twitter Paste</a>
-    <ul class="navigation round signout">
-      <li><%= link_to "帮助", "/" %></li>
-      <li><%= link_to "浏览", "/" %></li>
-      <li><%= link_to "注册", "/" %></li>
-      <li><%= link_to "登录", "/" %></li>
-    </ul>
+  <a id="logo" href="/" accesskey="1" title="Clip">Clip</a>
+  <ul class="navigation round signout">
+    <li><%= link_to "帮助", "/" %></li>
+    <li><%= link_to "浏览", "/" %></li>
+    <li><%= link_to "注册", "/" %></li>
+    <li><%= link_to "登录", "/" %></li>
+  </ul>
 </div>
