--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -1,8 +1,18 @@
-<%= form.label :login %><br />
-<%= form.text_field :login %><br />
-<br />
-<%= form.label :password, form.object.new_record? ? nil : "Change password" %><br />
-<%= form.password_field :password %><br />
-<br />
-<%= form.label :password_confirmation %><br />
-<%= form.password_field :password_confirmation %><br />
+<div class="field">
+  <%= form.label :email, :class => "title block" %>
+  <%= form.text_field :email, :class => "input-field" %>
+  <span class="field-desc">用此邮箱接收确认邮件才能完成注册。</span>
+</div>
+
+
+<div class="field">
+  <%= form.label :login, :class => "title block" %>
+  <%= form.text_field :login, :class => "input-field" %>
+  <span class="field-desc">最少2个字符，中、英文均可。</span>
+</div>
+
+<div class="field">
+  <%= form.label :password, :class => "title block" %>
+  <%= form.password_field :password, :class => "input-field" %>
+  <span class="field-desc">最少4个字符，请使用英文字母（区分大小写）、符号或数字。</span>
+</div>
