--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,9 @@
+<div class="rightCol">  Right Column</div>
+<div class="main">
 <h1>Register</h1>
 
 <% form_for @user, :url => users_path do |f| %>
   <%= render :partial => "form", :object => f %>
-  <%= f.submit "Register" %>
+  <%= f.submit "注册" ,:class => "common-btn"%>
 <% end %>
+</div>
