--- a/app/views/rpc/login.xml.erb
+++ b/app/views/rpc/login.xml.erb
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Response>
   <Header>
-    <Command>QuickReg</Command>
+    <Command>Login</Command>
     <Next></Next>
-    <RC>0</RC>
-    <Message>OK</Message>
+    <RC><%=@rc%></RC>
+    <Message><%=@message%></Message>
     <Count>0</Count>
-  </Header>
+   </Header>
   <Body>
+    <UserId>1</UserId>
   </Body>
 </Response>
+
