--- a/app/views/rpc/route_ex.xml.erb
+++ b/app/views/rpc/route_ex.xml.erb
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Response>
   <Header>
-    <Command>Login</Command>
+    <Command>RouteEx</Command>
     <Next></Next>
     <RC><%=@rc%></RC>
     <Message><%=@message%></Message>
     <Count>0</Count>
-   </Header>
+  </Header>
   <Body>
-    <% if @userid %>
-    <UserId><%=@userid%></UserId>
-    <% end %>
   </Body>
 </Response>
