--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/content.css" }
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/template/template.css" }
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/clip.css" }
+    %script{ :type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
   %body
     .page
       =render :partial => "tiles/head" 
