--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,11 +5,13 @@
     %title Clip
     %meta{ :name => "keywords", :content => "key words1" }/
     %meta{ :name => "description", :content => "description words" }/
+    = csrf_meta_tag
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/libraries.css" }
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/content.css" }
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/template/template.css" }
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/clip.css" }
     %script{ :type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
+    = javascript_include_tag "rails"
   %body
     .page
       =render :partial => "tiles/head" 
