--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,10 @@
 .rightCol Right Column
+
 .main
-  %h1 Register
+
+  %h1 注册
   - form_for @user, :url => users_path do |f|
     = render :partial => "form", :object => f
     = f.submit "注册" ,:class => "common-btn"
+
+  = javascript_include_tag "jquery.validate", "signup"
