change title for search enginee

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
     %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }/
-    %title Clip
+    %title 曲别针网 位置搜索 本地服务
     %meta{ :name => "keywords", :content => "key words1" }/
     %meta{ :name => "description", :content => "description words" }/
     = csrf_meta_tag
