--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }/
     %title 曲别针网 位置搜索 本地服务
-    %meta{ :name => "keywords", :content => "key words1" }/
+    %meta{ :name => "keywords", :content => "LBS Clip" }/
     %meta{ :name => "description", :content => "description words" }/
     = csrf_meta_tag
     %link{ :rel => "stylesheet", :type => "text/css", :media => "all", :href => "/stylesheets/oocss/core/libraries.css" }
